rust/foxglove-ws-protocol/src/client/snapshots/foxglove_ws_protocol__client__get_parameters__tests__encode.snap
---
source: src/client/get_parameters.rs
expression: message()
---
{
  "op": "getParameters",
  "parameterNames": [
    "param1",
    "param2"
  ],
  "id": "request-123"
}
