rust/foxglove-ws-protocol/src/client/snapshots/foxglove_ws_protocol__client__get_parameters__tests__encode_with_id.snap
---
source: rust/foxglove-ws-protocol/src/client/get_parameters.rs
expression: message_with_id()
---
{
  "op": "getParameters",
  "parameterNames": [
    "param1",
    "param2"
  ],
  "id": "my-id"
}
